Issue #2: Change general font color in order to improve contrast.

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Theme Name: MageKarma */
 
 /* Global */
-body { background: url("images/bg-3025.jpg") no-repeat center center fixed; margin: 0; font-family: GothamHTF-XLight, sans-serif; font-size: 14px; color: #4a4a4a }
+body { background: url("images/bg-3025.jpg") no-repeat center center fixed; margin: 0; font-family: GothamHTF-XLight, sans-serif; font-size: 14px }
 a { color: #f49d00 }
 h1, h2, h3, h4, h5 { font-family: GothamHTF-Medium, sans-serif }
 code { background: #eeeeee; padding: 1px 5px }
